[package]
name = "directory-encoding"
version = "0.1.0"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }

[build-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.10"
